--- a/projects.html
+++ b/projects.html
@@ -21,15 +21,15 @@
         <h1>My Projects</h1>
         <ul class="project-list">
             <li class="project-card">
-                <h2><a href="https://github.com/Vidhisha03" target="_blank">My Portfolio</a></h2>
+                <h2><a href="https://vidhisha03.github.io/Portfolio/" target="_blank">My Portfolio</a></h2>
                 <p>Personal Portfolio Project:Designed and developed a personal portfolio website to showcase my projects, skills, and achievements. The website features an intuitive layout and responsive design, highlighting my work in software development and data analysis. Technologies used: HTML, CSS, JavaScript, and responsive design principles.</p>
             </li>
             <li class="project-card">
-                <h2><a href="https://github.com/Vidhisha03" target="_blank">BookHub</a></h2>
-                <p>Online Bookstore Application:Developed an online bookstore application that enables seamless book browsing, selection, and purchase. Implemented functionalities for both users and administrators, allowing efficient management of book inventory and sales history. Technologies used: Java, JDBCServlet, MySQL, JavaScript.</p>
+                <h2><a href="https://github.com/Vidhisha03/E-Dashboard-TCP" target="_blank">E-Commerce Dashboard</a></h2>
+                <p>-Commerce Dashboard: Designed and developed a data management dashboard for The Computer Point, a hardware and software store. The dashboard leverages MongoDB to store and handle product information, inventory, and sales data. It allows administrators to easily view, add, edit, and delete product records.</p>
             </li>
             <li class="project-card">
-                <h2><a href="https://github.com/Vidhisha03" target="_blank">ChatApp</a></h2>
+                <h2><a href="https://chatapp-c2du.onrender.com" target="_blank">ChatApp</a></h2>
                 <p>Real-Time Chat Application:Developed a real-time chat application using Node.js, Express, and Socket.IO, enabling instant communication between users.Technologies used: Node.js, Express, Socket.IO, HTML, CSS, JavaScript.</p>
             </li>
             <!-- Add other projects here -->
